--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,14 +1,18 @@
 
 # custom, leef, cef
-log_type: custom
+log-type: custom
 
 
 
 
 
 transfer:
+  #  batch and realtime. if batch is selected,  interval and count should be defined.
+  #  In realtime mode, max number of logs per second can be defined with max_log_per_sec
+  mode: batch
+  max-log-per-sec: 1000
   # transfer interval (second)
   interval: 5
   #  number of logs
   count: 100
-  target-servers: 1.1.1.1, 2.2.2.2
+  target-servers: localhost:15002
